// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component should match snapshot 1`] = `
<DocumentFragment>
  <header
    class="ant-layout-header css-dev-only-do-not-override-1odpy5d"
  >
    <div
      class="ant-row ant-row-space-between css-dev-only-do-not-override-1odpy5d"
    >
      <div
        class="ant-col css-dev-only-do-not-override-1odpy5d"
      >
        <a
          class="logo text-white"
          data-discover="true"
          href="/"
        >
          The Movie DB
        </a>
      </div>
      <div
        class="ant-col css-dev-only-do-not-override-1odpy5d"
      >
        <span
          class="ant-typography ant-dropdown-trigger css-dev-only-do-not-override-1odpy5d"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-image css-dev-only-do-not-override-1odpy5d"
          >
            <img
              alt="User avatar"
              src="https://www.gravatar.com/avatar/image"
            />
          </span>
           
          <span
            class="hide-sm-down"
          >
            test/username
          </span>
           
          <span
            aria-label="caret-down"
            class="anticon anticon-caret-down"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="caret-down"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`Header component should match snapshot for unauthenticated 1`] = `
<DocumentFragment>
  <header
    class="ant-layout-header css-dev-only-do-not-override-1odpy5d"
  >
    <div
      class="ant-row ant-row-space-between css-dev-only-do-not-override-1odpy5d"
    >
      <div
        class="ant-col css-dev-only-do-not-override-1odpy5d"
      >
        <a
          class="logo text-white"
          data-discover="true"
          href="/"
        >
          The Movie DB
        </a>
      </div>
      <div
        class="ant-col css-dev-only-do-not-override-1odpy5d"
      >
        <a
          class="ant-typography text-white css-dev-only-do-not-override-1odpy5d"
        >
          Sign in
        </a>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`Header component should match snapshot with avatar_path 1`] = `
<DocumentFragment>
  <header
    class="ant-layout-header css-dev-only-do-not-override-1odpy5d"
  >
    <div
      class="ant-row ant-row-space-between css-dev-only-do-not-override-1odpy5d"
    >
      <div
        class="ant-col css-dev-only-do-not-override-1odpy5d"
      >
        <a
          class="logo text-white"
          data-discover="true"
          href="/"
        >
          The Movie DB
        </a>
      </div>
      <div
        class="ant-col css-dev-only-do-not-override-1odpy5d"
      >
        <span
          class="ant-typography ant-dropdown-trigger css-dev-only-do-not-override-1odpy5d"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-image css-dev-only-do-not-override-1odpy5d"
          >
            <img
              alt="User avatar"
              src="https://www.themoviedb.org/t/p/w32_and_h32_face/image"
            />
          </span>
           
          <span
            class="hide-sm-down"
          >
            test/username
          </span>
           
          <span
            aria-label="caret-down"
            class="anticon anticon-caret-down"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="caret-down"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`Header component should match snapshot with empty account 1`] = `
<DocumentFragment>
  <header
    class="ant-layout-header css-dev-only-do-not-override-1odpy5d"
  >
    <div
      class="ant-row ant-row-space-between css-dev-only-do-not-override-1odpy5d"
    >
      <div
        class="ant-col css-dev-only-do-not-override-1odpy5d"
      >
        <a
          class="logo text-white"
          data-discover="true"
          href="/"
        >
          The Movie DB
        </a>
      </div>
      <div
        class="ant-col css-dev-only-do-not-override-1odpy5d"
      >
        <span
          class="ant-typography ant-dropdown-trigger css-dev-only-do-not-override-1odpy5d"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-icon css-dev-only-do-not-override-1odpy5d"
          >
            <span
              aria-label="user"
              class="anticon anticon-user"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="user"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                />
              </svg>
            </span>
          </span>
           
          <span
            class="hide-sm-down"
          >
            Username
          </span>
           
          <span
            aria-label="caret-down"
            class="anticon anticon-caret-down"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="caret-down"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </header>
</DocumentFragment>
`;
